define default value in plugin